[package]
name = "amazon-captcha-rs"
version = "0.1.0"
edition = "2021"
authors = ["Victor Lourme <hello@vlour.me>"]
readme = "README.md"
repository = "https://github.com/vlourme/amazoncaptcha-rs"
license = "MIT"
keywords = ["captcha", "amazon", "amazon-captcha", "amazon-captcha-rs"]
categories = ["multimedia::images", "web-programming"]

[dev-dependencies]
reqwest = "0.11.20"
tokio = { version = "1", features = ["full"] }
regex = "1"

[dependencies]
image = "0.24.7"
bincode = "1.3.3"
